--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <title>Tyler's Quiz: Coding</title>
 </head>
 <body>
-    <div class="container">
+    <div class="main-container" id="main-container">
         <header>
             <h1>Tyler's Quiz: Coding</h1>
         </header>
