added new quizCont after removing mainCont

--- a/index.html
+++ b/index.html
@@ -34,22 +34,9 @@
                 <li><p>250</p><p>TCA</p></li>
             </ul>
         </section>
-
-        <section class="currentScore">
-        </section>
-
-        <section class="questions">
-        </section>
-
-        <section class="timer">
-        </section>
-
-        <section class="answers">
-        </section>
-
-        <section class="scoreInitials">
-        </section>
     </div>
+<div id="scriptBot">
     <script src="./assets/scripts/script.js"></script>
+</div>    
 </body>
 </html>
