--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <header>
             <h1>Tyler's Quiz: Coding</h1>
         </header>
-        <section class="aboutQuiz">
-            <h2>Scoring & Rules</h2>
-            <p>This quiz will grant 5 points per correct answer. You will have ***Change me*** seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
+        <section id="aboutQuiz" class="section-1"> 
+            <h2 id="questH1">Scoring & Rules</h2>
+            <p id="questP">This quiz will grant 5 points per correct answer. You will have ***Change me*** seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
         </section>
         <section class="takeBtn">
             <input type="button" id="takeQuiz" value="Take Quiz!">
         </section>
-        <section class="highScores">
+        <section class="highScores" id="highScores">
             <h2>High Scores</h2>
             <div>
                 <h3>Score</h3>
                 <h3>Initials</h3>    
             </div>
             <ul>
-                <li><p>1000</p><p>TCA</p></li>
-                <li><p>999</p><p>TCA</p></li>
-                <li><p>750</p><p>TCA</p></li>
-                <li><p>500</p><p>TCA</p></li>
-                <li><p>250</p><p>TCA</p></li>
+                <li id="score-1"><p>1000</p><p>TCA</p></li>
+                <li id="score-2"><p>999</p><p>TCA</p></li>
+                <li id="score-3"><p>750</p><p>TCA</p></li>
+                <li id="score-4"><p>500</p><p>TCA</p></li>
+                <li id="score-5"><p>250</p><p>TCA</p></li>
             </ul>
         </section>
     </div>
