--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <header>
             <h1>Tyler's Quiz: Coding</h1>
         </header>
-        <section id="aboutQuiz" class="section-1"> 
-            <h2 id="questH1">Scoring & Rules</h2>
-            <p id="questP">This quiz will grant 5 points per correct answer. You will have ***Change me*** seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
+        <section class="question" id="aboutQuiz"> 
+            <h2 id="questionH1">Scoring & Rules</h2>
+            <p id="questionP">This quiz will grant 5 points per correct answer. You will have ***Change me*** seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
         </section>
-        <section class="takeBtn">
+        <section class="takeBtn" id="takeBtn">
             <input type="button" id="takeQuiz" value="Take Quiz!">
         </section>
         <section class="highScores" id="highScores">
