--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="takeBtn" id="takeBtn">
             <input type="button" id="takeQuiz" value="Take Quiz!">
         </section>
-        <section class="highScores" id="highScores">
+        <section class="highScores" id="highScores"> 
             <h2>High Scores</h2>
             <div>
                 <h3>Score</h3> 
@@ -36,7 +36,7 @@
         </section>
     </div>
 <div id="scriptBot">
-    <script src="./assets/scripts/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </div>    
 </body>
 </html>
