--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1>Tyler's Quiz: Coding</h1>
         </header>
         <section class="question" id="aboutQuiz">  
-            <h2 id="questionH1">Scoring & Rules</h2>
-            <p id="questionP">This quiz will grant 5 points per correct answer. You will have ***Change me*** seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
+            <h2 class="questionH1" id="questionH1">Scoring & Rules</h2>
+            <p class="questionP" id="questionP">This quiz will grant 5 points per correct answer. You will have 60 seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
         </section>
         <section class="takeBtn" id="takeBtn">
             <input type="button" id="takeQuiz" value="Take Quiz!">
