started on function getHighScores(not working)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Tyler's Quiz: Coding</title>
 </head>
-<body>
+<body> 
     <div class="main-container" id="main-container">
         <header>
             <h1>Tyler's Quiz: Coding</h1>
@@ -27,11 +27,11 @@
                 <h3>Initials</h3>    
             </div>
             <ul>
-                <li id="score-1"><p>1000</p><p>TCA</p></li>
-                <li id="score-2"><p>999</p><p>TCA</p></li>
-                <li id="score-3"><p>750</p><p>TCA</p></li>
-                <li id="score-4"><p>500</p><p>TCA</p></li>
-                <li id="score-5"><p>250</p><p>TCA</p></li>
+                <li id="score-1"><p id="hScore1"></p><p id="hInit1"></p></li>
+                <li id="score-2"><p id="hScore2"></p><p id="hInit2"></p></li>
+                <li id="score-3"><p id="hScore3"></p><p id="hInit3"></p></li>
+                <li id="score-4"><p id="hScore4"></p><p id="hInit4"></p></li>
+                <li id="score-5"><p id="hScore5"></p><p id="hInit5"></p></li>
             </ul>
         </section>
     </div>
