added some css for margins

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="questionP" id="questionP">This quiz will grant 5 points per correct answer. You will have 60 seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
         </section>
         <section class="takeBtn" id="takeBtn">
-            <input type="button" id="takeQuiz" value="Take Quiz!">
+            <input type="button" class="takeQuiz" id="takeQuiz" value="Take Quiz!">
         </section>
         <section class="highScores" id="highScores"> 
             <h2>High Scores</h2>
@@ -39,4 +39,4 @@
     <script src="./assets/js/script.js"></script>
 </div>    
 </body>
-</html>
+</html> 
