added pictures to read me, add timer reduction if selected is incorrect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <section class="question" id="aboutQuiz">  
             <h2 class="questionH1" id="questionH1">Scoring & Rules</h2>
-            <p class="questionP" id="questionP">This quiz will grant 5 points per correct answer. You will have 60 seconds to complete the quiz. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
+            <p class="questionP" id="questionP">This quiz will grant 5 points per correct answer. You will have 60 seconds to complete the quiz. Selecting a wrong answer will deduct 5 seconds from the timer. The game ends when you run out of time or have completed all of the questions. If you complete all of the questions in time: the remaining seconds will be used as a score multiplier.</p>
         </section>
         <section class="takeBtn" id="takeBtn">
             <input type="button" class="takeQuiz" id="takeQuiz" value="Take Quiz!">
